tests/Rules/Aria/Fixtures/valid/textbox_with_aria_labelledby.html.twig
<span id="label">Search</span>
<div role="textbox" aria-labelledby="label" contenteditable="true"></div>
