tests/Rules/Aria/Fixtures/invalid/aria_labelledby_missing_id.html.twig
{# 1 errors #}
<div aria-labelledby="missing-id">Hello</div>
